Authors added, core refactoring